# saliencyDetection

./: CMakeLists.txt
include/: PreGraph.h
src/: PreGraph.cpp
test/: main.cpp
